Fixing alignment and size of header title

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,10 @@ a {
     z-index: 60;
     
     &__site-title {
-        text-align: center;
+        text-align: left;
+        margin-left: 30px;
+        font-size: 1.6rem;
+        padding-top: 10px;
     }
 }
 
@@ -83,6 +86,7 @@ a {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.46), 0 2px 10px 0 rgba(0, 0, 0, 0.42);
     transition: all .3s ease;
     transform: translateX(200px);
+    overflow: hidden;
     
     &--open {
         transform: translateX(0);
@@ -92,10 +96,16 @@ a {
         padding-top: 65px;
         text-align: right;
         padding-right: 30px;
+        height: 100%;
+        overflow-y: auto;
     }
     
     &__list-item {
-        margin: 10px 0;
+        margin: 40px 0;
+        
+        &:last-of-type {
+            padding-bottom: 100px;
+        }
     }
     
     &__link {
